# go-ji

./: .coveragerc  .dockerignore  .env.dev  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  dev-requirements.txt  fly.toml  pyproject.toml  renovate.json  requirements.txt  ruff.toml  start.sh
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 006936f7f7f1_add_users.py  68d7e4ed662a_add_created_by_to_long.py  a4f240bbc8f9_add_click_count.py  bf7c50886b7d_add_links.py  da9477cfcdeb_include_name_for_users.py
docker/: go-ji.sh  supervisor.conf  tailscale.sh
go_ji/: __init__.py  db.py  models.py
go_ji/templates/: hello.html  hot_reload.html  index.html  warm_reload.html
tests/: conftest.py  test_go_ji.py
