[project]
requires-python = ">=3.12"
name = "go-ji"
version = "0.1.0"
dependencies = [
    "alembic",
    "flask",
    "gunicorn",
    "sentry-sdk[flask]",
    "sqlalchemy",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pip-tools",
    "pyright",
    "pytest",
    "ruff",
    "ruff-lsp",
]

[tool.setuptools]
py-modules = []

[tool.coverage.run]
branch = true
source = ["go_ji"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.pip-tools]
strip-extras = true # silence warning that strip-extras will be the default in
                    # 8.0.0, at which point this setting can be removed

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",
    "E4",
    "E7",
    "E9",
    "W",
    "I",
    "N",
    "TCH", # flake8-type-checking
    "UP",  # pyupgrade
]
ignore = [
    "E741", # allow ambiguous variable names
]

[tool.ruff.format]
docstring-code-format = true
