[project]
requires-python = ">=3.12"
name = "go-ji"
version = "0.1.0"
dependencies = [
    "alembic",
    "flask",
    "gunicorn",
    "sentry-sdk[flask]",
    "sqlalchemy",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "pip-tools",
    "pyright",
    "pytest",
    "ruff",
    "ruff-lsp",
]

[tool.setuptools]
py-modules = []

[tool.coverage.run]
branch = true
source = ["go_ji"]

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.pip-tools]
strip-extras = true # silence warning that strip-extras will be the default in
                    # 8.0.0, at which point this setting can be removed

[tool.ruff]
target-version = "py312"

    [tool.ruff.lint]
    select = [
        "F",   # pyflakes
        "E4", "E7", "E9", "W", # pycodestyle
        "I",   # isort
        "N",   # pep8-naming
        "UP",  # pyupgrade
        "ANN", # flake8-annotations
        "TCH", # flake8-type-checking
        "RUF", # ruff
    ]
    ignore = [
        "E741", # allow ambiguous variable names
    ]

    [tool.ruff.lint.per-file-ignores]
    "tests/**/*.py" = ["ANN"]

    [tool.ruff.format]
    docstring-code-format = true
