[project]
requires-python = ">=3.12"
name = "go-ji"
version = "0.1.0"
dependencies = [
    "alembic",
    "flask",
    "gunicorn",
    "sentry-sdk[flask]",
    "sqlalchemy",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "flask-sock",
    "pip-tools",
    "pyright",
    "pytest",
    "ruff",
    "ruff-lsp",
]

[tool.setuptools]
py-modules = []

[tool.pip-tools]
strip-extras = true # silence warning that strip-extras will be the default in
                    # 8.0.0, at which point this setting can be removed
